<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="310dp">

    <LinearLayout
        android:layoutDirection="ltr"
        android:minWidth="310dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="65dp">

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginTop="75dp"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>

 <com.google.android.material.textfield.TextInputLayout
     android:gravity="start"
     android:hint="@string/user_name"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    app:errorEnabled="true"
     >

     <com.google.android.material.textfield.TextInputEditText
         android:gravity="start"
         android:inputType="textEmailAddress"
         android:backgroundTint="@color/colorPrimary"
         android:layout_margin="10dp"
         android:id="@+id/userName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"

         />

 </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:gravity="start"
            android:hint="@string/user_password"
            android:id="@+id/passwordLayout"
            app:counterMaxLength="8"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="start"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              />

        </com.google.android.material.textfield.TextInputLayout>



            <Button

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/login"
                android:text="@string/login"
                android:textAllCaps="false"
                />

        <LinearLayout
            android:layoutDirection="ltr"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">


            <CheckBox
                android:layout_gravity="start"
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stay_signed_in"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher_round"
        />
</FrameLayout>
